--- a/debian/control
+++ b/debian/control
@@ -6,23 +6,27 @@ Uploaders: Federico Ceratto <federico@debian.org>
 Build-Depends: debhelper (>= 11~),
  ca-certificates,
  libasound2-dev,
+ libenet-dev,
  libfreetype6-dev,
  libgcc-8-dev,
  libgl1-mesa-dev,
- libglew-dev,
  libglu1-mesa-dev,
  libopus-dev,
  libopusfile-dev,
+ libpcre2-dev,
  libpng-dev,
  libpulse-dev,
+ libsquish-dev,
  libssl-dev,
  libstdc++-8-dev,
  libtheora-dev,
  libudev-dev,
  libvorbis-dev,
+ libvpx-dev,
  libwebp-dev,
  libx11-dev,
  libxcursor-dev,
+ libxi-dev,
  libxinerama-dev,
  libxrandr-dev,
  pkg-config,
@@ -37,23 +41,23 @@ Package: godot3
 Architecture: amd64 arm64 armel armhf i386
 Depends: ${shlibs:Depends},
  ${misc:Depends},
- libx11-6,
- libxinerama1,
- libxcursor1,
- libxrandr2,
- libfreetype6,
- libpng16-16,
  libasound2,
- libpulse0,
- zlib1g,
- libgl1-mesa-glx,
+ libfreetype6,
  libgcc1,
- libwebp6,
- libtheora0,
- libvorbis0a,
+ libgl1-mesa-glx,
  libopus0,
  libopusfile0,
- libglew2.0
+ libpng16-16,
+ libpulse0,
+ libtheora0,
+ libvorbis0a,
+ libvpx4,
+ libwebp6,
+ libx11-6,
+ libxcursor1,
+ libxinerama1,
+ libxrandr2,
+ zlib1g
 Description: Full 2D and 3D game engine with editor
  Godot is an advanced, feature packed, multi-platform 2D and 3D game engine.
  It provides a huge set of common tools, so you can just focus on making
@@ -63,48 +67,48 @@ Package: godot3-runner
 Architecture: amd64 arm64 armel armhf i386
 Depends: ${shlibs:Depends},
  ${misc:Depends},
- libx11-6,
- libxinerama1,
- libxcursor1,
- libxrandr2,
- libfreetype6,
- libpng16-16,
  libasound2,
- libpulse0,
- zlib1g,
- libgl1-mesa-glx,
+ libfreetype6,
  libgcc1,
- libwebp6,
- libtheora0,
- libvorbis0a,
+ libgl1-mesa-glx,
  libopus0,
  libopusfile0,
- libglew2.0
+ libpng16-16,
+ libpulse0,
+ libtheora0,
+ libvorbis0a,
+ libvpx4,
+ libwebp6,
+ libx11-6,
+ libxcursor1,
+ libxinerama1,
+ libxrandr2,
+ zlib1g
 Description: Godot game engine run-time
  Godot is an advanced, feature packed, multi-platform 2D and 3D game engine.
  This package allows games to be run from source or data-pack.
 
-Package: godot2-server
+Package: godot3-server
 Architecture: amd64 arm64 armel armhf i386
 Depends: ${shlibs:Depends},
  ${misc:Depends},
- libx11-6,
- libxinerama1,
- libxcursor1,
- libxrandr2,
- libfreetype6,
- libpng16-16,
  libasound2,
- libpulse0,
- zlib1g,
- libgl1-mesa-glx,
+ libfreetype6,
  libgcc1,
- libwebp6,
- libtheora0,
- libvorbis0a,
+ libgl1-mesa-glx,
  libopus0,
  libopusfile0,
- libglew2.0
+ libpng16-16,
+ libpulse0,
+ libtheora0,
+ libvorbis0a,
+ libvpx4,
+ libwebp6,
+ libx11-6,
+ libxcursor1,
+ libxinerama1,
+ libxrandr2,
+ zlib1g
 Description: Headless Godot game engine run-time
  Godot is an advanced, feature packed, multi-platform 2D and 3D game engine.
  This package provides a command-line only version of the program.
