--- a/debian/rules
+++ b/debian/rules
@@ -16,21 +16,40 @@ override_dh_clean:
 	find . -iname ".o" -delete
 	find . -iname ".sconsign.dblite" -delete
 	rm -rf bin/
+	rm -rf enet
+	rm -rf freetype
+	rm -rf libogg
+	rm -rf libpng
+	rm -rf libtheora
+	rm -rf libvorbis
+	rm -rf libvpx
+	rm -rf libwebp
+	rm -rf openssl
+	rm -rf opus
+	rm -rf pcre2
+	rm -rf squish
+	rm -rf zlib
 
 include /usr/share/dpkg/architecture.mk  # provides DEB_HOST_ARCH_BITS
 
+# bullet requires 2.88
+
 SCONS_OPTIONS = bits=$(DEB_HOST_ARCH_BITS) \
+	builtin_bullet=yes \
+	builtin_enet=no \
 	builtin_freetype=no \
-	builtin_glew=no \
 	builtin_libogg=no \
 	builtin_libpng=no \
 	builtin_libtheora=no \
 	builtin_libvorbis=no \
+	builtin_libvpx=no \
 	builtin_libwebp=no \
 	builtin_openssl=no \
 	builtin_opus=no \
+	builtin_pcre2=no \
+	builtin_squish=no \
 	builtin_zlib=no \
-	use_llvm=no
+	builtin_zstd=yes
 
 %:
 	dh $@
@@ -42,7 +61,9 @@ override_dh_auto_build:
 	scons platform=x11    tools=yes target=release_debug $(SCONS_OPTIONS) -j $(NUMJOBS) CCFLAGS="$(CXXFLAGS)" LINKFLAGS="$(LDFLAGS)" CFLAGS="$(CFLAGS)"
 
 override_dh_auto_install:
-	install -D -m 400 $(CURDIR)/bin/godot.x11.opt.tools.64.llvm           $(CURDIR)/debian/godot3/usr/bin/godot3
-	install -D -m 400 $(CURDIR)/bin/godot.x11.opt.64.llvm                 $(CURDIR)/debian/godot3-runner/usr/bin/godot3-runner
-	install -D -m 400 $(CURDIR)/bin/godot_server.server.opt.tools.64.llvm $(CURDIR)/debian/godot3-server/usr/bin/godot3-server
+	install -D -m 400 $(CURDIR)/bin/godot.x11.opt.tools.64           $(CURDIR)/debian/godot3/usr/bin/godot3
+	install -D -m 400 $(CURDIR)/bin/godot.x11.opt.64                 $(CURDIR)/debian/godot3-runner/usr/bin/godot3-runner
+	install -D -m 400 $(CURDIR)/bin/godot_server.server.opt.tools.64 $(CURDIR)/debian/godot3-server/usr/bin/godot3-server
+	install -D -m 444 $(CURDIR)/misc/dist/linux/godot.desktop        $(CURDIR)/debian/godot3/usr/share/applications/godot3.desktop
+	sed -i 's/^Exec=.*/Exec=godot3 -p/' $(CURDIR)/debian/godot3/usr/share/applications/godot3.desktop
 	dh_auto_install
