--- a/debian/control
+++ b/debian/control
@@ -34,8 +34,8 @@ Build-Depends: debhelper (>= 11~),
  zlib1g-dev
 Standards-Version: 4.2.0
 Homepage: https://godotengine.org
-Vcs-Git: https://salsa.debian.org/debian/godot
-Vcs-Browser: https://salsa.debian.org/debian/godot
+Vcs-Git: https://salsa.debian.org/debian/godot3.git
+Vcs-Browser: https://salsa.debian.org/debian/godot3
 
 Package: godot3
 Architecture: amd64 arm64 armel armhf i386
