--- a/debian/control
+++ b/debian/control
@@ -38,7 +38,7 @@ Vcs-Git: https://salsa.debian.org/debian/godot3.git
 Vcs-Browser: https://salsa.debian.org/debian/godot3
 
 Package: godot3
-Architecture: amd64 arm64 armel armhf i386
+Architecture: any
 Depends: ${shlibs:Depends},
  ${misc:Depends}
 Description: Full 2D and 3D game engine with editor
@@ -47,7 +47,7 @@ Description: Full 2D and 3D game engine with editor
  your game without reinventing the wheel.
 
 Package: godot3-runner
-Architecture: amd64 arm64 armel armhf i386
+Architecture: any
 Depends: ${shlibs:Depends},
  ${misc:Depends}
 Description: Godot game engine run-time
@@ -55,7 +55,7 @@ Description: Godot game engine run-time
  This package allows games to be run from source or data-pack.
 
 Package: godot3-server
-Architecture: amd64 arm64 armel armhf i386
+Architecture: any
 Depends: ${shlibs:Depends},
  ${misc:Depends}
 Description: Headless Godot game engine run-time
