Import Debian changes 3.2-stable-2
godot (3.2-stable-2) unstable; urgency=medium
.
  * Team upload
  * Remove build-deps libgcc-8-dev, libstdc++-8-dev (Closes: #944168)
  * Clean .sconsign?.dblite because .sconsign5.dblite prevents the build
    (Closes: #954608)

--- a/debian/rules
+++ b/debian/rules
@@ -18,7 +18,7 @@ override_dh_clean:
 	find . -iname ".sconsign.dblite" -delete
 	find . -name '*.o' -delete
 	rm -rf main/libmain.x11.opt.tools.64.a main/tests/libtests.x11.opt.tools.64.a
-	rm -rf config.log .sconsign4.dblite
+	rm -rf config.log .sconsign?.dblite
 	rm -rf bin/
 	rm -rf enet
 	rm -rf freetype
