--- a/debian/rules
+++ b/debian/rules
@@ -15,8 +15,10 @@ override_dh_clean:
 	find . -iname "*.pyc" -delete
 	find . -iname ".a" -delete
 	find . -iname ".o" -delete
+	find . -iname ".scons_env.json" -delete
 	find . -iname ".sconsign.dblite" -delete
 	find . -name '*.o' -delete
+	rm -rf .sconf_temp/
 	rm -rf main/libmain.x11.opt.tools.64.a main/tests/libtests.x11.opt.tools.64.a
 	rm -rf config.log .sconsign?.dblite
 	rm -rf bin/
