--- a/debian/control
+++ b/debian/control
@@ -63,7 +63,7 @@ Description: Headless Godot game engine run-time
 
 Package: godot3-dev
 Architecture: all
-Depends: ${misc:Depends}, godot3 (=${binary:Version})
+Depends: ${misc:Depends}, godot3 (>= ${source:Version})
 Description: Godot game engine - Development headers
  Godot is an advanced, feature packed, multi-platform 2D and 3D game engine.
  This package contains development headers for modules.
