--- a/debian/gitlab-ci.yml
+++ b/debian/gitlab-ci.yml
@@ -1,10 +1,4 @@
-image: registry.gitlab.com/eighthave/ci-image-git-buildpackage:latest
-
-pages:
-  stage: deploy
-  artifacts:
-    paths:
-      - "*.deb"
-  script:
-    - gitlab-ci-git-buildpackage-all
-    - gitlab-ci-aptly
+---
+include:
+  - https://salsa.debian.org/salsa-ci-team/pipeline/raw/master/salsa-ci.yml
+  - https://salsa.debian.org/salsa-ci-team/pipeline/raw/master/pipeline-jobs.yml
