--- a/debian/control
+++ b/debian/control
@@ -37,7 +37,7 @@ Vcs-Git: https://salsa.debian.org/debian/godot3.git
 Vcs-Browser: https://salsa.debian.org/debian/godot3
 
 Package: godot3
-Architecture: any
+Architecture: amd64 arm64 armel armhf i386 ppc64el s390x
 Depends: ${shlibs:Depends},
  ${misc:Depends}
 Description: Full 2D and 3D game engine with editor
@@ -46,7 +46,7 @@ Description: Full 2D and 3D game engine with editor
  your game without reinventing the wheel.
 
 Package: godot3-runner
-Architecture: any
+Architecture: amd64 arm64 armel armhf i386 ppc64el s390x
 Depends: ${shlibs:Depends},
  ${misc:Depends}
 Description: Godot game engine run-time
@@ -54,7 +54,7 @@ Description: Godot game engine run-time
  This package allows games to be run from source or data-pack.
 
 Package: godot3-server
-Architecture: any
+Architecture: amd64 arm64 armel armhf i386 ppc64el s390x
 Depends: ${shlibs:Depends},
  ${misc:Depends}
 Description: Headless Godot game engine run-time
